Перемещение узлов в интерфейса

--- a/src/InternalGui/InternalGui.fsproj
+++ b/src/InternalGui/InternalGui.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Counter.fs" />
+    <Compile Include="Main.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
