Доработан GUI для загрузки файлов QPNEt

--- a/src/InternalGui/InternalGui.fsproj
+++ b/src/InternalGui/InternalGui.fsproj
@@ -10,9 +10,9 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="0.9.7" />
-    <PackageReference Include="JaggerJo.Avalonia.FuncUI" Version="0.4.0" />
-    <PackageReference Include="JaggerJo.Avalonia.FuncUI.DSL" Version="0.4.0" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.9.12" />
+    <PackageReference Include="JaggerJo.Avalonia.FuncUI" Version="0.4.1" />
+    <PackageReference Include="JaggerJo.Avalonia.FuncUI.DSL" Version="0.4.3" />
     <PackageReference Include="JaggerJo.Avalonia.FuncUI.Elmish" Version="0.4.0" />
   </ItemGroup>
   <ItemGroup>
@@ -20,5 +20,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.fsproj" />
+    <ProjectReference Include="..\QPNet\QPNet.fsproj" />
   </ItemGroup>
 </Project>
