--- a/src/Core/Core.fsproj
+++ b/src/Core/Core.fsproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Compile Include="Utils.fs" />
     <Compile Include="Types.fs" />
+    <Compile Include="Types.Network.fs" />
     <Compile Include="Processing.fs" />
   </ItemGroup>
 </Project>
